Added tags to swagger docs
